fix text-align

--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
 
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.9;
+    line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
 }
@@ -312,7 +312,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
 
     font-size: 16px;
     text-align: center;
-    line-height: 1.9;
+    line-height: 1.19;
 }
 
 
